syntax = "proto3";

option csharp_namespace = "PCController.Local";

package PCController;

// The greeting service definition.
service RemoteServersProviders {
  rpc GetRemoteProviderUpdates (Empty ) returns (stream UpdateActionData) {}
  rpc WakeUp (WakeUpData ) returns (Empty ) {}
  rpc InvokeCommand (InvokeCommandData ) returns (Empty ) {}

}

// The response message containing the greetings.
message UpdateActionData {
  string providerId = 1;
  string serverId = 2;
  Action action=3;
  OnlineStatus onlineStatus=4;
  string additionalInfoJson = 5;
  bool isPinProtectedServer=6;
  string initialPin = 7;
}

message InvokeCommandData{
  string providerId = 1;
  string serverId = 2;
  string command = 3;
  string pin = 4;
}

message WakeUpData{
  string providerId = 1;
  string serverId = 2;
}

enum Action {
  Add = 0;
  Update = 1;
  Remove = 2;
}
enum OnlineStatus {
        Unknown=0;
        Offline=1;
        DeviceOnline=2;
        ServerOnline=3;
}


message Empty {

}